# Tomiko

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  bank.py  bot.py  compose.yaml  log.py  mind.py  reply.py  run.py  test.py  tomiko.py
commands/: explain.py  mind.py  slap.py
ext/: __init__.py  gif_handler.py
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230629_075140_create_initial_tables.rs
src/: bot.py  command.py  config.py  config.rs  database.py  lib.rs  log.py  main.py  main.rs  message.py  mind.py  reply.py  telegram.py  util.py
src.bkp/: config.py
src.bkp/database/: Author.py  Dictionary.py  Message.py  Slap.py  type.py
src/commands/: __init__.py  explain.py  mind.py  slap.py
src/database/: Author.py  Dictionary.py  Message.py  Slap.py  __init__.py  author.py  common.py  event.py  expression.py  message.py  slap.py
src/entity/: chat.rs  message.rs  mod.rs  prelude.rs  update.rs  user.rs
src/telegram/: mod.rs  request.rs  response.rs
