[package]
name    = "tomiko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tomikod"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[workspace]
members = [ ".", "migration" ]

[dependencies]
rand    = "*"
chrono  = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["json"] }
tokio   = { version = "*", features = ["full"] }
serde      = { version = "*", features = ["derive"] }
serde_json = "*"
toml       = "*"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono" ], default-features = false }
migration = { path="migration" }
macros = { path="macros" }
dotenvy = "*"
